--- a/electron/backend/requirements-core.txt
+++ b/electron/backend/requirements-core.txt
@@ -1,10 +1,19 @@
+# == ARM64-safe core ==
 fastapi>=0.110,<1.0
-uvicorn[standard]>=0.30,<0.40
+uvicorn>=0.30,<0.40
 pydantic>=2.6,<3
+
+# JSON - use orjson for ARM64 compatibility
 orjson>=3.9,<4
-PyYAML>=6.0,<7           # ← needed
+
+PyYAML>=6.0,<7
 langdetect>=1.0.9,<2
 numpy>=1.26,<3
-faiss-cpu>=1.7.4,<2      # ← or your known-good exact version
-llama-cpp-python>=0.2.87
+
+# ARM64-specific FAISS
+faiss-cpu-noavx2>=1.7.4,<2  # or build from source
+
+# ARM64 llama-cpp-python
+llama-cpp-python>=0.2.87 --extra-index-url https://abetlen.github.io/llama-cpp-python/whl/cpu
+
 PyMuPDF>=1.23,<2
