--- a/package.json
+++ b/package.json
@@ -7,14 +7,15 @@
   "scripts": {
     "prep:venv:arm64": "bash scripts/build_venv_core.sh arm64",
     "prep:venv:x64": "bash scripts/build_venv_core.sh x64",
-    "dev": "BLUR_HOME=$HOME/blur BLUR_CONFIG_PATH=$HOME/blur/config.yaml ELECTRON_ENABLE_LOGGING=1 ELECTRON_DISABLE_SECURITY_WARNINGS=1 concurrently --raw -n vite,electron \"vite --port 6969 --strictPort --host --clearScreen=false\" \"wait-on tcp:6969 && electron .\"",
-    "electron": "BLUR_HOME=$HOME/blur BLUR_CONFIG_PATH=$HOME/blur/config.yaml electron .",
+    "dev": "BLUR_HOME=$HOME/blur BLUR_CONFIG_PATH=$HOME/blur/config.yaml ELECTRON_ENABLE_LOGGING=1 ELECTRON_DISABLE_SECURITY_WARNINGS=1 concurrently --raw -n vite,electron \"vite --port 25329 --strictPort --host --clearScreen=false\" \"wait-on tcp:25329 && electron .\"",
     "build": "vite build",
     "preview": "vite preview",
-    "start": "BLUR_HOME=$HOME/blur BLUR_CONFIG_PATH=$HOME/blur/config.yaml electron .",
+    "electron:dev": "BLUR_HOME=$HOME/blur BLUR_CONFIG_PATH=$HOME/blur/config.yaml electron .",
+    "start:dev": "BLUR_HOME=$HOME/blur BLUR_CONFIG_PATH=$HOME/blur/config.yaml electron .",
     "dist": "npm run prep:venv:arm64 && vite build && STRICT_AFTERPACK=1 BLUR_BUNDLE_VENV=1 BLUR_BUNDLE_MODELS=$HOME/blur/models BLUR_BUNDLE_ROOT=$HOME/blur BLUR_BUNDLE_BLURCHIVE=$HOME/blur/core/ouinet/blurchive/ecosystem electron-builder",
     "pack:dmg": "npm run prep:venv:x64 && vite build && STRICT_AFTERPACK=1 BLUR_BUNDLE_VENV=1 BLUR_VENV_NAME=blur_env-darwin-x64 BLUR_BUNDLE_MODELS=$HOME/blur/models BLUR_BUNDLE_ROOT=$HOME/blur BLUR_BUNDLE_BLURCHIVE=$HOME/blur/core/ouinet/blurchive/ecosystem electron-builder --mac dmg --x64",
-    "pack:dmg:arm64": "echo VENV_NAME=$BLUR_VENV_NAME && npm run prep:venv:arm64 && vite build && STRICT_AFTERPACK=1 BLUR_BUNDLE_VENV=1 BLUR_VENV_NAME=blur_env-darwin-arm64 BLUR_BUNDLE_MODELS=$HOME/blur/models BLUR_BUNDLE_ROOT=$HOME/blur BLUR_BUNDLE_BLURCHIVE=$HOME/blur/core/ouinet/blurchive/ecosystem npx electron-builder --mac dmg --arm64",
+    "pack:dmg:arm64": "export BLUR_VENV_NAME=blur_env-darwin-arm64 && npm run prep:venv:arm64 && vite build && STRICT_AFTERPACK=1 BLUR_BUNDLE_VENV=1 BLUR_BUNDLE_MODELS=$HOME/blur/models BLUR_BUNDLE_ROOT=$HOME/blur BLUR_BUNDLE_BLURCHIVE=$HOME/blur/core/ouinet/blurchive/ecosystem npx electron-builder --mac dmg --arm64",
+    "prep:venv:arm64": "ARCH=arm64 bash scripts/build_venv_core.sh",
     "pack:dmg:universal": "npm run prep:venv:arm64 && npm run prep:venv:x64 && vite build && STRICT_AFTERPACK=1 BLUR_BUNDLE_VENV=1 BLUR_VENV_MODE=dual BLUR_BUNDLE_MODELS=$HOME/blur/models BLUR_BUNDLE_ROOT=$HOME/blur BLUR_BUNDLE_BLURCHIVE=$HOME/blur/core/ouinet/blurchive/ecosystem electron-builder --mac dmg --universal",
     "dist:mac:pkg": "npm run prep:venv:arm64 && vite build && STRICT_AFTERPACK=1 BLUR_BUNDLE_VENV=1 BLUR_VENV_NAME=blur_env-darwin-arm64 BLUR_BUNDLE_MODELS=$HOME/blur/models BLUR_BUNDLE_ROOT=$HOME/blur BLUR_BUNDLE_BLURCHIVE=$HOME/blur/core/ouinet/blurchive/ecosystem electron-builder --mac pkg --arm64",
     "dist:win": "vite build && electron-builder --win nsis",
