main pack aligned

--- a/package.json
+++ b/package.json
@@ -11,13 +11,8 @@
     "preview": "vite preview",
     "electron:dev": "BLUR_HOME=$HOME/blur BLUR_CONFIG_PATH=$HOME/blur/config.yaml electron .",
     "start:dev": "BLUR_HOME=$HOME/blur BLUR_CONFIG_PATH=$HOME/blur/config.yaml electron .",
-    "dist": "npm run prep:venv:arm64 && vite build && STRICT_AFTERPACK=1 BLUR_BUNDLE_VENV=1 BLUR_BUNDLE_MODELS=$HOME/blur/models BLUR_BUNDLE_ROOT=$HOME/blur BLUR_BUNDLE_BLURCHIVE=$HOME/blur/core/ouinet/blurchive/ecosystem electron-builder",
-    "pack:dmg": "npm run prep:venv:x64 && vite build && STRICT_AFTERPACK=1 BLUR_BUNDLE_VENV=1 BLUR_VENV_NAME=blur_env-darwin-x64 BLUR_BUNDLE_MODELS=$HOME/blur/models BLUR_BUNDLE_ROOT=$HOME/blur BLUR_BUNDLE_BLURCHIVE=$HOME/blur/core/ouinet/blurchive/ecosystem electron-builder --mac dmg --x64",
-    "pack:dmg:arm64": "export BLUR_VENV_NAME=blur_env-darwin-arm64 && npm run prep:venv:arm64 && vite build && STRICT_AFTERPACK=1 BLUR_BUNDLE_VENV=1 BLUR_BUNDLE_MODELS=$HOME/blur/models BLUR_BUNDLE_ROOT=$HOME/blur BLUR_BUNDLE_BLURCHIVE=$HOME/blur/core/ouinet/blurchive/ecosystem npx electron-builder --mac dmg --arm64",
-    "pack:dmg:universal": "npm run prep:venv:arm64 && npm run prep:venv:x64 && vite build && STRICT_AFTERPACK=1 BLUR_BUNDLE_VENV=1 BLUR_VENV_MODE=dual BLUR_BUNDLE_MODELS=$HOME/blur/models BLUR_BUNDLE_ROOT=$HOME/blur BLUR_BUNDLE_BLURCHIVE=$HOME/blur/core/ouinet/blurchive/ecosystem electron-builder --mac dmg --universal",
-    "dist:mac:pkg": "npm run prep:venv:arm64 && vite build && STRICT_AFTERPACK=1 BLUR_BUNDLE_VENV=1 BLUR_VENV_NAME=blur_env-darwin-arm64 BLUR_BUNDLE_MODELS=$HOME/blur/models BLUR_BUNDLE_ROOT=$HOME/blur BLUR_BUNDLE_BLURCHIVE=$HOME/blur/core/ouinet/blurchive/ecosystem electron-builder --mac pkg --arm64",
-    "dist:win": "vite build && electron-builder --win nsis",
-    "dist:linux": "vite build && electron-builder --linux AppImage deb",
+    "pack:dmg:arm64": "npm run prep:venv:arm64 && vite build && BLUR_VENV_NAME=blur_env-darwin-arm64 BLUR_BUNDLE_VENV=1 STRICT_AFTERPACK=1 BLUR_BUNDLE_MODELS=$HOME/blur/models BLUR_BUNDLE_ROOT=$HOME/blur BLUR_BUNDLE_BLURCHIVE=$HOME/blur/core/ouinet/blurchive/ecosystem electron-builder --mac dmg --arm64",
+    "dist": "npm run pack:dmg:arm64",
     "rebuild:native": "electron-rebuild -f -w sqlite3",
     "postinstall": "electron-rebuild -w sqlite3 || true"
   },
@@ -62,8 +57,8 @@
         "to": "core"
       },
       {
-        "from": "core/ouinet/blurchive/ecosystem",
-        "to": "core/ouinet/blurchive/ecosystem"
+        "from": "blur_env-darwin-arm64",
+        "to": "blur_env-darwin-arm64"
       },
       {
         "from": "config.yaml",
